feat: improved security with multi-stage build and run app as www-data user

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,25 @@
-# Example environment variables for nsupdate.info
-# Copy this file to .env and fill in your own values.
+# Example environment variables for the nsupdate.info Docker container.
+# Copy this file to .env and customize the values for your environment.
 
-# --- REQUIRED ON FIRST RUN ---
-# Set a secure password for the administrative superuser.
-# This is mandatory for the container's initial startup.
-DJANGO_SUPERUSER_PASSWORD=your-super-secret-password
-
-# --- HIGHLY RECOMMENDED FOR PRODUCTION ---
+# --- Django Secret Key (REQUIRED FOR PRODUCTION) ---
 # A long, random string used for cryptographic signing.
-# You can generate one with: python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
+# IMPORTANT: This key must be kept secret.
+# Generate a new key with: python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
 SECRET_KEY=your-very-long-and-random-secret-key
 
-# The username for the administrative superuser.
+# --- Superuser Credentials (REQUIRED ON FIRST RUN) ---
+# These are used to create the initial administrator account.
 DJANGO_SUPERUSER_USERNAME=admin
-
-# --- OPTIONAL ---
-# The email for the administrative superuser.
 DJANGO_SUPERUSER_EMAIL=admin@your-domain.com
+DJANGO_SUPERUSER_PASSWORD=your-super-secret-password
+
+# --- Database Configuration (OPTIONAL) ---
+# The default is an SQLite database inside the 'database' volume.
+# Uncomment and configure the line below to use an external database (e.g., PostgreSQL).
+# DATABASE_URL="postgres://user:password@host:port/dbname"
+
+# --- Gunicorn Configuration (OPTIONAL) ---
+# Comma-separated list of trusted IP addresses for X-Forwarded-For headers.
+# Set this to your reverse proxy's IP or network. Defaults to '*' (all).
+# Example: GUNICORN_FORWARDED_ALLOW_IPS="172.18.0.0/16"
+GUNICORN_FORWARDED_ALLOW_IPS=*
