--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Docker image for testing
-        run: docker build -t nsupdate-test .
+        run: docker build --build-arg BUILD_TARGET=test -t nsupdate-test .
 
       - name: Run Django tests
         # We pass a dummy password to satisfy the entrypoint script.
